PLAT-1336-1 Improved ExceptionsCollector Internal Structure and Test